images on main page

--- a/html/index.html
+++ b/html/index.html
@@ -14,21 +14,27 @@
         <a href="#home" class="active">Logo</a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="index.html">Home</a>
+          <a href="films.html">Films</a>
+          <a href="personage.html">Characters</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="#" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
       </div>
 
     <h1>Test</h1>
     <p></p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <div class="framed">
+        <img class="responsiveImg" src="https://focus.telerama.fr/2021/11/07/0/0/1366/768/1200/0/60/0/6a1d863_1636279567926-gang-0.jpg/webp" alt="">
+    </div>
+    <div class="framed">
+      <img class="responsiveImg" src="https://www.lelabocambrai.fr/iguana/uploads/image/Jeunesse/Actualit%C3%A9s/2021/2021-S08%20-%20Studio%20Ghibli%20-%20(C)%20Le%20Labo%20-%20Cambrai_1948x1096.jpg" alt="">
+    </div>
+    <div class="framed">
+      <img class="responsiveImg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX2actarZVUx2UHO6ORYRL14vI7tvo93nP3Q&s" alt="">
+    </div>
     <footer>
         <a href=""><img src="" alt=""></a>
         <a href=""><img src="" alt=""></a>
